--- a/example/Example1.html
+++ b/example/Example1.html
@@ -15941,7 +15941,7 @@ var _csicar$elm_mathui$Main$view = function (model) {
 			_0: A2(
 				_elm_lang$html$Html$map,
 				_csicar$elm_mathui$Main$MathUiMsg,
-				_csicar$elm_mathui$MathUi$view(model.mathUi)),
+				_csicar$elm_mathui$MathUi$viewAll(model.mathUi)),
 			_1: {ctor: '[]'}
 		});
 };
